Added slime and removed portfolio margin top

--- a/client/index.html
+++ b/client/index.html
@@ -29,10 +29,11 @@
             </div>
         </banner>
         <description>
-            <div class="slime"></div>
+            <div class="knight"></div>
             <h2 id="description">I'm a highly motivated engineer seeking to leverage my passion for technology to make the world a better place</h2>
         </description>
         <portfolio>
+            <div class="slime"></div>
             <h1>Portfolio</h1>
             <!-- Slideshow container -->
             <div class="slideshow-container">
