Removed ugly caption text, added github under portfolio

--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@
         </description>
         <portfolio>
             <div class="slime"></div>
+
             <h1>Portfolio</h1>
             <!-- Slideshow container -->
             <div class="slideshow-container">
@@ -42,61 +43,61 @@
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 10</div>
                     <img src="dissuade\DissuadeHompage.png" style="width:100%">
-                    <div class="text">Dissuade Homepage</div>
+                    <!--<div class="text">Dissuade Homepage</div>-->
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 10</div>
-                    <img src="dissuade\dissuadeDashboard.png" style="width:100%; margin-bottom: 1rem;">
-                    <div class="text" style="">Dissuade Dashboard</div>
+                    <img src="dissuade\dissuadeDashboard.png" style="width:100%;">
+                    <!--<div class="text" style="">Dissuade Dashboard</div>-->
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 10</div>
                     <img src="dissuade\dissuadeProfiles.png" style="width:100%">
-                    <div class="text">Dissuade Profiles</div>
+                    <!--<div class="text">Dissuade Profiles</div>-->
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">4 / 10</div>
                     <img src="dissuade\dissuadeCommentFeed.png" style="width:100%">
-                    <div class="text">Dissuade Posts</div>
+                    <!--<div class="text">Dissuade Posts</div>-->
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">5 / 10</div>
                     <img src="yelpcamp\YelpCampHomePage.png" style="width:100%">
-                    <div class="text">YelpCamp Landing</div>
+                    <!--<div class="text">YelpCamp Landing</div>-->
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">6 / 10</div>
                     <img src="yelpcamp\YelpCampCampgrounds.png" style="width:100%">
-                    <div class="text">YelpCamp Campgrounds</div>
+                    <!--<div class="text">YelpCamp Campgrounds</div>-->
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">7 / 10</div>
                     <img src="yelpcamp\YelpCampCampground.png" style="width:100%">
-                    <div class="text">YelpCamp Campground</div>
+                    <!--<div class="text">YelpCamp Campground</div>-->
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">8 / 10</div>
                     <img src="candy\museumCandyLanding.png" style="width:100%">
-                    <div class="text">Museum of Candy</div>
+                    <!--<div class="text">Museum of Candy</div>-->
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">9 / 10</div>
                     <img src="candy\museumCandyScrolled.png" style="width:100%">
-                    <div class="text">Museum of Candy</div>
+                    <!--<div class="text">Museum of Candy</div>-->
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">10 / 10</div>
-                    <img src="knight\pocket-knight.png" style="width:100%; margin-bottom: 1rem;">
-                    <div class="text">Pocket Knight</div>
+                    <img src="knight\pocket-knight.png" style="width:100%;">
+                    <!--<div class="text">Pocket Knight</div>-->
                 </div>
 
                 <!-- Next and previous buttons -->
@@ -118,6 +119,7 @@
                 <span class="dot" onclick="currentSlide(9)"></span>
                 <span class="dot" onclick="currentSlide(10)"></span>
             </div>
+            <a id="github" href="https://github.com/SavvyCoder" style="height: 64px; width: 64px"><img src="GitHubMark.png" style="margin-top: 1rem;" class = "hvr-grow"></img></a>
         </portfolio>
         <technologies>
             <div id="frontend">
