Replaced banner, replaced slime with 120px github logo

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Savinda Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Staatliches" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="./main.css" />
     <script src="main.js"></script>
 </head>
@@ -33,7 +34,7 @@
             <h2 id="description">I'm a highly motivated engineer seeking to leverage my passion for technology to make the world a better place</h2>
         </description>
         <portfolio>
-            <div class="slime"></div>
+            <a id="github" href="https://github.com/SavvyCoder" style="height: 120px; width: 120px"><img src="git.png" style="margin-top: 1rem;" class = "hvr-grow"></img></a>
 
             <h1>Portfolio</h1>
             <!-- Slideshow container -->
@@ -119,7 +120,6 @@
                 <span class="dot" onclick="currentSlide(9)"></span>
                 <span class="dot" onclick="currentSlide(10)"></span>
             </div>
-            <a id="github" href="https://github.com/SavvyCoder" style="height: 64px; width: 64px"><img src="GitHubMark.png" style="margin-top: 1rem;" class = "hvr-grow"></img></a>
         </portfolio>
         <technologies>
             <div id="frontend">
