--- a/client/index.html
+++ b/client/index.html
@@ -42,64 +42,77 @@
 
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade">
-                    <div class="numbertext">1 / 10</div>
+                    <div class="numbertext">1 / 12</div>
                     <img src="dissuade\DissuadeHompage.png" style="width:100%">
                     <!--<div class="text">Dissuade Homepage</div>-->
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">2 / 10</div>
+                    <div class="numbertext">2 / 12</div>
                     <img src="dissuade\dissuadeDashboard.png" style="width:100%;">
                     <!--<div class="text" style="">Dissuade Dashboard</div>-->
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">3 / 10</div>
+                    <div class="numbertext">3 / 12</div>
                     <img src="dissuade\dissuadeProfiles.png" style="width:100%">
                     <!--<div class="text">Dissuade Profiles</div>-->
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">4 / 10</div>
+                    <div class="numbertext">4 / 12</div>
                     <img src="dissuade\dissuadeCommentFeed.png" style="width:100%">
                     <!--<div class="text">Dissuade Posts</div>-->
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">5 / 10</div>
+                    <div class="numbertext">5 / 12</div>
                     <img src="yelpcamp\YelpCampHomePage.png" style="width:100%">
                     <!--<div class="text">YelpCamp Landing</div>-->
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">6 / 10</div>
+                    <div class="numbertext">6 / 12</div>
                     <img src="yelpcamp\YelpCampCampgrounds.png" style="width:100%">
                     <!--<div class="text">YelpCamp Campgrounds</div>-->
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">7 / 10</div>
+                    <div class="numbertext">7 / 12</div>
                     <img src="yelpcamp\YelpCampCampground.png" style="width:100%">
                     <!--<div class="text">YelpCamp Campground</div>-->
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">8 / 10</div>
+                    <div class="numbertext">8 / 12</div>
                     <img src="candy\museumCandyLanding.png" style="width:100%">
                     <!--<div class="text">Museum of Candy</div>-->
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">9 / 10</div>
+                    <div class="numbertext">9 / 12</div>
                     <img src="candy\museumCandyScrolled.png" style="width:100%">
                     <!--<div class="text">Museum of Candy</div>-->
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">10 / 10</div>
+                    <div class="numbertext">10 / 12</div>
                     <img src="knight\pocket-knight.png" style="width:100%;">
                     <!--<div class="text">Pocket Knight</div>-->
                 </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">11 / 12</div>
+                    <img src="blog\mobzblog1.png" style="width:100%">
+                    <!--<div class="text">Museum of Candy</div>-->
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">12 / 12</div>
+                    <img src="blog\mobzblog2.png" style="width:100%;">
+                    <!--<div class="text">Pocket Knight</div>-->
+                </div>
+
 
                 <!-- Next and previous buttons -->
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -119,6 +132,8 @@
                 <span class="dot" onclick="currentSlide(8)"></span>
                 <span class="dot" onclick="currentSlide(9)"></span>
                 <span class="dot" onclick="currentSlide(10)"></span>
+                <span class="dot" onclick="currentSlide(11)"></span>
+                <span class="dot" onclick="currentSlide(12)"></span>
             </div>
         </portfolio>
         <technologies>
