Added hover effect to knight with redirect to linkedIN profile

--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,11 @@
             </div>
         </banner>
         <description>
-            <div class="knight"></div>
+
+            <a href="https://www.linkedin.com/in/savinda-gunawardena-641b72123/">
+                <div class="knight hvr-grow"> </div>
+            </a>
+
             <h2 id="description">I'm a highly motivated engineer seeking to leverage my passion for technology to make the world a better place</h2>
         </description>
         <portfolio>
